--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <a href="wpp.html"> Nosso WhatsApp</a>
-    <a href="edereco.html"
+    <a href="edereco.html"></a>
+    
 </body>
 </html>
