--- a/home.html
+++ b/home.html
@@ -1,11 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./index.css">
+    <title>MeuHTML</title>
 </head>
-<body>
-    
+<body id="home">
+    <input type="radio" class="slide-controller" name="slide" checked />
+    <input type="radio" class="slide-controller" name="slide" />
+    <input type="radio" class="slide-controller" name="slide" />
+    <input type="radio" class="slide-controller" name="slide" />
+    <input type="radio" class="slide-controller" name="slide" />
+    <input type="radio" class="slide-controller" name="slide" />
+
+    <div class="slide-show" >
+      <ul class="slides-list" >
+        <li class="slide" >
+          <img id=pizza src="img/pizza1.png" />
+        </li>
+        <li class="slide" >
+          <img id=pizza src="img/pizza3.png" />
+        </li>
+        <li class="slide" >
+        <img id=pizza  src="img/pizza7.png"/>
+        </li>
+        <li class="slide" >
+          <img id=pizza src="img/pizza5.png"/>
+        </li>
+        <li class="slide" >
+          <img id=pizza src="img/pizza8.png"/>
+        </li>
+        <li class="slide" >
+          <img id=pizza  src="img/pizza6.png"/>
+        </li>
+
+    </ul>
+    </div>
 </body>
 </html>
