--- a/menu.html
+++ b/menu.html
@@ -1,11 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./index.css">
+    <title>MeuHTML</title>
 </head>
-<body>
-    
+<body id="menu">
+    <header class="menuCabecalho">
+        <div class="logo">
+            <img src="img/pizza9.png" width=100 alt="foto logo">
+        </div>
+        <div class="esquerda">
+        <h1>  Pizza:  </h1>
+        </div>
+
+    </header>
+    <dl>
+        <h1>
+            <b>
+                <p class="Espacamento">.</p>
+            </b>
+        </h1>
+        <ul>
+            <li id="limenu"><a href="./Marguerita.html">Marguerita</a></li>
+            <li id="limenu"><a href="./Calabresa.html">Calabresa</a></li>
+            <li id="limenu"><a href="./Baiana.html">Baiana</a></li>
+            <li id="limenu"><a href="./Lombinho.html">Lombinho</a></li>
+            <li id="limenu"><a href="./Portuguesa.html">Portuguesa</a></li>
+            <li id="limenu"><a href="./QuatroQueijos.html">Qatro_queijos</a></li>
+        </ul>
+    </dl>
 </body>
 </html>
+
+
+
+
+
+ <!-- intellij idea keybindings -->
