--- a/menu.html
+++ b/menu.html
@@ -30,6 +30,12 @@
             <li id="limenu"><a href="./Lombinho.html">Lombinho</a></li>
             <li id="limenu"><a href="./Portuguesa.html">Portuguesa</a></li>
             <li id="limenu"><a href="./QuatroQueijos.html">Qatro_queijos</a></li>
+            <li id="limenu"><a href="./Marguerita.html">Marguerita</a></li>
+            <li id="limenu"><a href="./Calabresa.html">Calabresa</a></li>
+            <li id="limenu"><a href="./Baiana.html">Baiana</a></li>
+            <li id="limenu"><a href="./Lombinho.html">Lombinho</a></li>
+            <li id="limenu"><a href="./Portuguesa.html">Portuguesa</a></li>
+            <li id="limenu"><a href="./QuatroQueijos.html">Qatro_queijos</a></li>
         </ul>
     </dl>
 </body>
