--- a/head.html
+++ b/head.html
@@ -16,7 +16,8 @@
         </div>
         <div id="headBotoes">
             <a id="ahead" href="./headQuemSomos.html">Quem somos</a>
-            <a id="ahead" href="./contato.html">Contato Davi</a>
+            <a id="ahead" href="./contato.html">Contato Davi Pinheiro</a>
+            <a id="ahead" href="./contato2.html">Contato Gabriel Moreira</a>
             <a id="ahead" href="https://www.blogger.com" target="_blank">Nosso blog</a>
         </div>
 </body>
