--- a/home.html
+++ b/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" style="height: calc(100%);">
+<html lang="pt-br" class="html">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,33 +8,39 @@
     <title>MeuHTML</title>
 </head>
 <body id="home">
-    <input type="radio" class="slide-controller" name="slide" checked />
-    <input type="radio" class="slide-controller" name="slide" />
-    <input type="radio" class="slide-controller" name="slide" />
-    <input type="radio" class="slide-controller" name="slide" />
-    <input type="radio" class="slide-controller" name="slide" />
-    <input type="radio" class="slide-controller" name="slide" />
+    <input type="radio" class="slide-controller" name="pizza" checked />
+    <input type="radio" class="slide-controller" name="pizza" />
+    <input type="radio" class="slide-controller" name="pizza" />
+    <input type="radio" class="slide-controller" name="pizza" />
+    <input type="radio" class="slide-controller" name="pizza" />
+    <input type="radio" class="slide-controller" name="pizza" />
 
     <div class="slide-show" >
       <ul class="slides-list" >
-        <li class="slide" >
-          <img id=pizza src="img/pizza1.png" />
+        <img class=pizza src="img/pizza1.png"/>
+        <img class=pizza src="img/pizza3.png"/>
+        <img class=pizza src="img/pizza7.png"/>
+        <img class=pizza src="img/pizza5.png"/>
+        <img class=pizza src="img/pizza8.png"/>
+        <img class=pizza src="img/pizza6.png"/>
+        <!-- <li class="slide" >
+          <img class=pizza src="img/pizza1.png" />
         </li>
         <li class="slide" >
-          <img id=pizza src="img/pizza3.png" />
+          <img class=pizza src="img/pizza3.png" />
         </li>
         <li class="slide" >
-        <img id=pizza  src="img/pizza7.png"/>
+        <img class=pizza  src="img/pizza7.png"/>
         </li>
         <li class="slide" >
-          <img id=pizza src="img/pizza5.png"/>
+          <img class=pizza src="img/pizza5.png"/>
         </li>
         <li class="slide" >
-          <img id=pizza src="img/pizza8.png"/>
+          <img class=pizza src="img/pizza8.png"/>
         </li>
         <li class="slide" >
-          <img id=pizza  src="img/pizza6.png"/>
-        </li>
+          <img class=pizza  src="img/pizza6.png"/>
+        </li> -->
 
     </ul>
     </div>
