--- a/menu.html
+++ b/menu.html
@@ -12,7 +12,7 @@
         <div class="logo">
             <img src="img/pizza9.png" width=100 alt="foto logo">
         </div>
-        <div class="esquerda">
+        <div class="esquerda" class="html">
         <h1>  Pizza:  </h1>
         </div>
 
