--- a/contato2.html
+++ b/contato2.html
@@ -12,8 +12,7 @@
         <h1>Gabriel Moreira</h1>
     </div>
     <div>
-        <li>Telefone: (85) 99676-0961
-        </li>
+        <li>Telefone: (85) 99676-0961</li>
         <li>Email: gabrielmoreiratxr@gmail.com</li>  
     </div>
     <div>
