--- a/menu.html
+++ b/menu.html
@@ -24,18 +24,18 @@
             </b>
         </h1>
         <ul>
-            <li id="limenu"><a href="./Marguerita.html">Marguerita</a></li>
-            <li id="limenu"><a href="./Calabresa.html">Calabresa</a></li>
-            <li id="limenu"><a href="./Baiana.html">Baiana</a></li>
-            <li id="limenu"><a href="./Lombinho.html">Lombinho</a></li>
-            <li id="limenu"><a href="./Portuguesa.html">Portuguesa</a></li>
-            <li id="limenu"><a href="./QuatroQueijos.html">Qatro_queijos</a></li>
-            <li id="limenu"><a href="./Marguerita.html">Marguerita</a></li>
-            <li id="limenu"><a href="./Calabresa.html">Calabresa</a></li>
-            <li id="limenu"><a href="./Baiana.html">Baiana</a></li>
-            <li id="limenu"><a href="./Lombinho.html">Lombinho</a></li>
-            <li id="limenu"><a href="./Portuguesa.html">Portuguesa</a></li>
-            <li id="limenu"><a href="./QuatroQueijos.html">Qatro_queijos</a></li>
+            <a class="amenu"href="./Marguerita.html">Marguerita</a></li>
+            <a class="amenu"href="./Calabresa.html">Calabresa</a></li>
+            <a class="amenu"href="./Baiana.html">Baiana</a></li>
+            <a class="amenu"href="./Lombinho.html">Lombinho</a></li>
+            <a class="amenu"href="./Portuguesa.html">Portuguesa</a></li>
+            <a class="amenu"href="./QuatroQueijos.html">Qatro_queijos</a></li>
+            <a class="amenu"href="./Marguerita.html">Marguerita</a></li>
+            <a class="amenu"href="./Calabresa.html">Calabresa</a></li>
+            <a class="amenu"href="./Baiana.html">Baiana</a></li>
+            <a class="amenu"href="./Lombinho.html">Lombinho</a></li>
+            <a class="amenu"href="./Portuguesa.html">Portuguesa</a></li>
+            <a class="amenu"href="./QuatroQueijos.html">Qatro_queijos</a></li>
         </ul>
     </dl>
 </body>
