--- a/head.html
+++ b/head.html
@@ -15,10 +15,10 @@
             <h1>  Pizzaria Infinity  </h1>
         </div>
         <div id="headBotoes">
-            <a id="ahead" href="./headQuemSomos.html">Quem somos</a>
-            <a id="ahead" href="./contato.html">Contato Davi Pinheiro</a>
-            <a id="ahead" href="./contato2.html">Contato Gabriel Moreira</a>
-            <a id="ahead" href="https://www.blogger.com" target="_blank">Nosso blog</a>
+            <a class="ahead" href="./headQuemSomos.html">Quem somos</a>
+            <a class="ahead" href="./contato.html">Contato Davi Pinheiro</a>
+            <a class="ahead" href="./contato2.html">Contato Gabriel Moreira</a>
+            <a class="ahead" href="https://www.blogger.com" target="_blank">Nosso blog</a>
         </div>
 </body>
 </html>
