--- a/contato2.html
+++ b/contato2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="html">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,19 +7,19 @@
     <link rel="stylesheet" href="./index.css">
     <title>Document</title>
 </head>
-<body id="head">
+<body class="head">
     <div>
-        <h1>Gabriel Moreira</h1>
+        <img class='imgs' src="img/foto2.png" alt="Foto pessoal">
+    </div>
+    <div>
+        <h2>Gabriel Moreira</h2>
     </div>
     <div>
         <li>Telefone: (85) 99676-0961</li>
-        <li>Email: gabrielmoreiratxr@gmail.com</li>  
+        <li>Email: gabrielmoreiratxr@gmail.com</li>   
     </div>
     <div>
-        <dt><h2><img src="img/foto2.png" width="100" alt="Foto pessoal"></h2></dt>  <!-- height="" altura width="" largura-->
-    </div>
-    <div>
-        <h2 id="retornar"><span><a href="./head.html">Retornar</a></span></h2>
+        <a class="ahead" href="./head.html">Retornar</a>
     </div>
 
 </body>
