--- a/head.html
+++ b/head.html
@@ -7,18 +7,19 @@
     <link rel="stylesheet" href="./index.css">
     <title>MeuHTML</title>
 </head>
-<body id="head">
-        <div class="logo">
-            <img src="img/pizza2.png" width=100 alt="foto logo">
-        </div>
-        <div>
-            <h1>  Pizzaria Infinity  </h1>
-        </div>
-        <div id="headBotoes">
-            <a class="ahead" href="./headQuemSomos.html">Quem somos</a>
-            <a class="ahead" href="./contato.html">Contato Davi Pinheiro</a>
-            <a class="ahead" href="./contato2.html">Contato Gabriel Moreira</a>
-            <a class="ahead" href="https://www.blogger.com" target="_blank">Nosso blog</a>
-        </div>
+<body class="head">
+
+    <div>
+        <h1>  Pizzaria Infinity  </h1>
+    </div>
+    <div class="logo">
+        <img class="imgs" src="img/pizza2.png" alt="foto logo">
+    </div>
+    <div id="headBotoes">
+        <a class="ahead" href="./headQuemSomos.html">Quem somos</a>
+        <a class="ahead" href="./contato.html">Contato Davi Pinheiro</a>
+        <a class="ahead" href="./contato2.html">Contato Gabriel Moreira</a>
+        <a class="ahead" href="https://www.blogger.com" target="_blank">Nosso blog</a>
+    </div>
 </body>
 </html>
