--- a/headQuemSomos.html
+++ b/headQuemSomos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="html">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,20 +7,20 @@
     <link rel="stylesheet" href="./index.css">
     <title>Document</title>
 </head>
-<body id="head">
+<body class="head">
     <div class="logo">
-        <img src="img/pizza10.png" width=100 alt="foto logo">
-    </div>
-    <div class="esquerda">
-        <h1>  Pizzaria Infinity  </h1>
+        <img  class="imgs" src="img/pizza10.png" alt="foto logo">
     </div>
     <div>
-        <li>A melhor pizza do Ceará</li>   
-        <li>Nosso endereço é rua: A  nº 1</li>
+        <h2>        Pizzaria Infinity             </h2>
+    </div>
+    <div>
+            <li>É para aqueles que apreciam uma boa pizza, em um ambiente agradavel. </li>
+            <li>Temos as melhores pizzas do Ceará. Nosso endereço: Av: ABC  nº 100</li>   
     </div>
     <div class="direito">
         <nav>
-            <h2 id="retornar"><span><a href="./head.html">Retornar</a></span></h2>
+            <a class="ahead" href="./head.html">Retornar</a>
         </nav>
     </div>
 </body>
