--- a/menu.html
+++ b/menu.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" class="html">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./index.css">
     <title>MeuHTML</title>
 </head>
-<body id="menu">
+<body class="menu">
     <header class="menuCabecalho">
         <div class="logo">
             <img src="img/pizza9.png" width=100 alt="foto logo">
@@ -17,12 +17,7 @@
         </div>
 
     </header>
-    <dl>
-        <h1>
-            <b>
-                <p class="Espacamento">.</p>
-            </b>
-        </h1>
+    <dl id="dlmenu">
         <ul>
             <a class="amenu"href="./Marguerita.html">Marguerita</a></li>
             <a class="amenu"href="./Calabresa.html">Calabresa</a></li>
