--- a/foot.html
+++ b/foot.html
@@ -56,7 +56,7 @@
             </tr>
         </table>
     </div>
-    <div>
+    <div id="footimg">
         <img src="img/pizza4.png" height=200px alt="foto logo">
     </div>
 
