--- a/home.html
+++ b/home.html
@@ -14,16 +14,15 @@
     <input type="radio" class="slide-controller" name="pizza" />
     <input type="radio" class="slide-controller" name="pizza" />
     <input type="radio" class="slide-controller" name="pizza" />
-
-    <div class="slide-show" >
-      <ul class="slides-list" >
-        <img class=pizza src="img/pizza1.png"/>
-        <img class=pizza src="img/pizza3.png"/>
-        <img class=pizza src="img/pizza7.png"/>
-        <img class=pizza src="img/pizza5.png"/>
-        <img class=pizza src="img/pizza8.png"/>
-        <img class=pizza src="img/pizza6.png"/>
-    </ul>
+    <div id="forno">
+        <ul class="slides-list" >
+            <img class=pizza src="img/pizza1.png"/>
+            <img class=pizza src="img/pizza3.png"/>
+            <img class=pizza src="img/pizza7.png"/>
+            <img class=pizza src="img/pizza5.png"/>
+            <img class=pizza src="img/pizza8.png"/>
+            <img class=pizza src="img/pizza6.png"/>
+        </ul>
     </div>
 </body>
 </html>
