--- a/index2.html
+++ b/index2.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
  
-<html class="cpu">
+<html class="mobile">
  <head>
   <title> Frames em HTML </title>
   <meta name="description" content="Framset - Como usar frames em sites HTML">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
  </head>
-    <frameset  rows="20%,80%,20%">
+    <frameset  rows="20%,60%,20%">
         <frame name="head" src="head.html" noresize="no">
-        <frameset cols="20%,*">
-         <frame name="menu" src="menu.html" noresize="no"></frame>
-         <frame name="conteudo" src="home.html" noresize="no"></frame>
-     </frameset>
+        <frame name="menu" src="menuhome.html" noresize="no">
+        <!-- <frame name="conteudo" src="home.html" noresize="no"> -->
         <frame name="foot" src="foot.html" noresize="no">
     </frameset>   
 </html
