--- a/head.html
+++ b/head.html
@@ -12,14 +12,25 @@
     <div>
         <h1>  Pizzaria Infinity  </h1>
     </div>
-    <div class="logo">
+    <div id="headlogo">
         <img class="imgs" src="img/pizza2.png" alt="foto logo">
     </div>
-    <div id="headBotoes">
-        <a class="ahead" href="./headQuemSomos.html">Quem somos</a>
-        <a class="ahead" href="./contato.html">Contato Davi Pinheiro</a>
-        <a class="ahead" href="./contato2.html">Contato Gabriel Moreira</a>
-        <a class="ahead" href="https://www.blogger.com" target="_blank">Nosso blog</a>
+    <nav id="headBotoes">
+        <a id="ahead1" href="./headQuemSomos.html">Quem somos</a>
+        <a id="ahead2" href="./contato.html">Contato Davi Pinheiro</a>
+        <a id="ahead3" href="./contato2.html">Contato Gabriel Moreira</a>
+        <a id="ahead4" href="https://www.blogger.com" target="_blank">Nosso blog</a>
+    </nav>
+    <div class="sanduiche">
+        <div class="barra">
+
+        </div>
+        <div class="barra">
+
+        </div>
+        <div class="barra">
+
+        </div>
     </div>
 </body>
 </html>
