--- a/menu.html
+++ b/menu.html
@@ -9,13 +9,13 @@
 </head>
 <body class="menu">
     <header class="menuCabecalho">
-        <div class="logo">
-            <img src="img/pizza9.png" width=100 alt="foto logo">
-        </div>
-        <div class="esquerda" class="html">
-        <h1>  Pizza:  </h1>
+        <div id="menuimg">
+            <img class="imgs" src="img/pizza9.png" alt="foto logo">
         </div>
 
+        <div id="menupizza">
+            <h1>  Pizza:  </h1>
+        </div>
     </header>
     <dl id="dlmenu">
         <ul>
