--- a/head.html
+++ b/head.html
@@ -21,16 +21,10 @@
         <a id="ahead3" href="./contato2.html">Contato Gabriel Moreira</a>
         <a id="ahead4" href="https://www.blogger.com" target="_blank">Nosso blog</a>
     </nav>
-    <div class="sanduiche">
-        <div class="barra">
-
-        </div>
-        <div class="barra">
-
-        </div>
-        <div class="barra">
-
-        </div>
+    <div class="comprimir">
+        <div class="barra"></div>
+        <div class="barra"></div>
+        <div class="barra"></div>
     </div>
 </body>
 </html>
