--- a/menu.html
+++ b/menu.html
@@ -19,18 +19,18 @@
     </header>
     <dl id="dlmenu">
         <ul>
-            <a class="amenu"href="./Marguerita.html">Marguerita</a></li>
-            <a class="amenu"href="./Calabresa.html">Calabresa</a></li>
-            <a class="amenu"href="./Baiana.html">Baiana</a></li>
-            <a class="amenu"href="./Lombinho.html">Lombinho</a></li>
-            <a class="amenu"href="./Portuguesa.html">Portuguesa</a></li>
-            <a class="amenu"href="./QuatroQueijos.html">Qatro_queijos</a></li>
-            <a class="amenu"href="./Marguerita.html">Marguerita</a></li>
-            <a class="amenu"href="./Calabresa.html">Calabresa</a></li>
-            <a class="amenu"href="./Baiana.html">Baiana</a></li>
-            <a class="amenu"href="./Lombinho.html">Lombinho</a></li>
-            <a class="amenu"href="./Portuguesa.html">Portuguesa</a></li>
-            <a class="amenu"href="./QuatroQueijos.html">Qatro_queijos</a></li>
+            <a class="amenu"href="./pizza1.html">Marguerita</a></li>
+            <a class="amenu"href="./pizza2.html">Calabresa</a></li>
+            <a class="amenu"href="./pizza3.html">Baiana</a></li>
+            <a class="amenu"href="./pizza4.html">Lombinho</a></li>
+            <a class="amenu"href="./pizza5.html">Portuguesa</a></li>
+            <a class="amenu"href="./pizza6.html">Qatro_queijos</a></li>
+            <a class="amenu"href="./pizza1.html">pizza1</a></li>
+            <a class="amenu"href="./pizza2.html">pizza2</a></li>
+            <a class="amenu"href="./pizza3.html">pizza3</a></li>
+            <a class="amenu"href="./pizza4.html">pizza4</a></li>
+            <a class="amenu"href="./pizza5.html">pizza5</a></li>
+            <a class="amenu"href="./pizza6.html">pizza6</a></li>
         </ul>
     </dl>
 </body>
