--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
  
 <html class="cpu">
  <head>
-  <title> Frames em HTML </title>
+  <title> Pizzaria Infinity </title>
   <meta name="description" content="Framset - Como usar frames em sites HTML">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
+  <link rel="shortcut icon" type="imagex/png" href="./img/pizza2.png">
  </head>
     <frameset  rows="20%,80%,20%">
         <frame name="head" src="head.html" noresize="no">
